minor changes and corrections

--- a/BootsFacesPresentation/src/main/webapp/resources/presentation/presentation.css
+++ b/BootsFacesPresentation/src/main/webapp/resources/presentation/presentation.css
@@ -177,3 +177,10 @@ aside {
 	right:120px;
 	bottom:160px;
 }
+
+.badge {
+	font-size: 24px !important;
+}
+.label {
+	font-size: 24px !important;
+}
